# hybrid-search

./: .pre-commit-config.yaml  Makefile  README.md  run.py  setup.cfg
.github/workflows/: dev-merge.yml  main-merge.yml
assets/: readme.md
data/: finance_template_map.xlsx
docs/: objective.md
notebooks/: Gradio.ipynb  Testing.ipynb  readme.md
requirements/: main.txt
src/hybrid_search/: __init__.py  evaluation.py  mapper.py  search.py
