[metadata]
name = hybrid_search
version = 0.1.0
author = Lalu Erfandi Maula Yusnu
author_email = nunenuh@gmail.com
description = A solution for mapping account names using a hybrid search mechanism combining BM25 and Sentence Transformers with FAISS.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nunenuh/hybrid-search
project_urls =
    Bug Tracker = https://github.com/nunenuh/hybrid-search/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src/hybrid_search
python_requires = >=3.6

[options.package_data]
* = *.txt, *.rst

[options.extras_require]
dev =
    -r requirements/dev.txt

[options.entry_points]
console_scripts =
    hybrid_search = hybrid_search.main:main

[flake8]
max-line-length = 88
exclude = .git,__pycache__,docs/conf.py,old,build,dist

[tool:pytest]
addopts = --verbose

[options.dependency_links]
file://requirements/main.txt